<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BScThesis</string>
    <string name="welcome_text">Make new dog friends with HauWeMet</string>
    <string name="register"> Register</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="name">Dog\'s name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="describe_dog">Describe your dog!</string>
    <string name="bread">Bread</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="size">Size</string>
    <string name="neutered">Neutered?</string>
    <string name="not_like">Not like</string>
    <string name="be_here">Be here for</string>
    <string name="match_me">Find new friends</string>
    <string name="my_matches">My friends</string>
    <string name="my_profile"> My profile</string>
    <string name="pee">Pee on</string>
    <string name="lick">Lick</string>
    <string name="message">Message</string>
    <string name="enter_mess">Enter HauHau</string>
    <string name="save">Save</string>
    <string name="message_with">Start to sniff with!</string>
    <string name="logout">Logout</string>
    <string name="app_nickname">HauWeMet</string>
    <string name="app_description">App for doggies, human allowed</string>
    <string name="about">About</string>

    <string-array name="breads">
        <item>Mixed</item>
        <item>Labrador Retriever</item>
        <item>French Bulldog</item>
        <item>German Shepherd</item>
        <item>Golden Retriever</item>
        <item>Australian Shepherd</item>
        <item>Beagle</item>
        <item>Siberian Husky</item>
        <item>Pembroke Welsh Corgis</item>
        <item>Pug</item>
        <item>Border Collie</item>
        <item>Shiba Inu</item>
        <item>Akita Inu</item>
    </string-array>

    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="size">
        <item>Smale</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="neutered">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="not_like">
        <item>Female</item>
        <item>Male</item>
        <item>Both</item>
        <item>None</item>
    </string-array>

    <string-array name="be_here_for">
        <item>Get help</item>
        <item>Bring help</item>
        <item>Fun</item>
    </string-array>

    <string-array name="age">
        <item>Puppy</item>
        <item>Young</item>
        <item>Middle</item>
        <item>Old</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>