<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/get_started_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".describe_your_dog_fragment.DescribeYourDogFragment">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:indeterminate="true"
            app:indicatorColor="@color/pink"
            app:layout_constraintBottom_toTopOf="@+id/describe_your_dog_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/describe_your_dog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/describe_dog"
            android:textAllCaps="true"
            android:textColor="@color/pink"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/describe_your_dog_image_area"
            android:layout_width="290dp"
            android:layout_height="190dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129"
            app:srcCompat="@drawable/dog_profile_photo" />

        <ImageButton
            android:id="@+id/describe_your_dog_add_photo"
            android:layout_width="69dp"
            android:layout_height="66dp"
            android:layout_marginTop="150dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/describe_your_dog_image_area"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/describe_your_dog_bread_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"

            android:textColor="@color/broken_black"
            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_add_photo"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/bread_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/bread"
                android:textColor="@color/broken_black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/describe_your_dog_sex_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"

            android:textColor="@color/broken_black"
            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/describe_your_dog_age_field"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_bread_field"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/sex_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/sex"
                android:textColor="@color/broken_black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/describe_your_dog_age_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"

            android:textColor="@color/broken_black"
            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_bread_field"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/age_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/age"
                android:textColor="@color/broken_black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/describe_your_dog_size_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"

            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/describe_your_dog_neutered_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_sex_field"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/size_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/size"
                android:textColor="@color/broken_black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/describe_your_dog_neutered_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"

            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_age_field"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/neutered_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/neutered"
                android:textColor="@color/broken_black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/describe_your_dog_not_like_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"

            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_size_field"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/not_like_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/not_like"
                android:textColor="@color/broken_black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/describe_your_dog_be_here_for_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"

            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_not_like_field"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/be_here_for_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/be_here"
                android:textColor="@color/broken_black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/describe_your_dog_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/lato_bold"
            android:textSize="16sp"
            android:theme="@style/RegisterButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/describe_your_dog_be_here_for_field"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>