<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/broken_black"

            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"
            app:layout_constraintBottom_toTopOf="@+id/login_password_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_text_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/broken_black" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/welcome_back_dog_image"
            android:layout_width="385dp"
            android:layout_height="252dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="380dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.592"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/welcome_back" />

        <TextView
            android:id="@+id/welcome_back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textAllCaps="true"
            android:textColor="@color/pink"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.014" />

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:theme="@style/LoginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="50dp"

            android:textColor="@color/broken_black"
            android:textColorHint="@color/pink"
            app:boxStrokeColor="@color/pink"
            app:counterEnabled="false"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/pink"
            app:layout_constraintBottom_toTopOf="@+id/login_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/broken_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_text_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/broken_black" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>